fix: update python packages

--- a/templates/admin/admin_base.html
+++ b/templates/admin/admin_base.html
@@ -8,11 +8,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="itraderUk is an earning platform">
-    <meta name="keywords" content="itrader,trading">
+    <meta name="description" content="referralboost is an earning platform">
+    <meta name="keywords" content="Referral Boost,trading">
     <meta name="author" content="PIXINVENT">
     <title>Admin Dashboard</title>
-    <link rel="apple-touch-icon" href="{% static 'app-assets/images/logo/itrader_logo-32_x_27.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'app-assets/images/logo/referralboost_logo-32_x_27.png' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app-assets/images/ico/favicon1.ico' %}">
     <link
         href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i"
@@ -94,7 +94,7 @@
                 class="float-md-left d-block d-md-inline-block">Copyright &copy;<script>
                     document.write(new Date().getFullYear());
                 </script>
-                <a class="text-bold-800 grey darken-2" href="#" target="_blank"> iTrader UK </a></span><span
+                <a class="text-bold-800 grey darken-2" href="#" target="_blank"> Referral Boost </a></span><span
                 class="float-md-right d-none d-lg-block"> Your Love & Our Security <i
                     class="feather icon-heart pink"></i></span></p>
     </footer>
