--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -257,7 +257,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script>
-                        </span> , <a href="#">iTrader-uk</a>
+                        </span> , <a href="#">Referral Boost</a>
 
                     </p>
                 </div>
