--- a/templates/landing/landing_base.html
+++ b/templates/landing/landing_base.html
@@ -5,23 +5,23 @@
 <head>
 
     <meta charset="utf-8">
-    <title> {% block title %} iTrader Uk {% endblock title %}</title>
-    <meta name="description" content="iTrader UK" />
+    <title> {% block title %} Referral Boost {% endblock title %}</title>
+    <meta name="description" content="Referral Boost" />
     <meta name="author" content="SK">
-    <meta name="keywords" content="Trading, Money Earning Webiste, Money Online, Online Income, Itrader, itraderuk, itrader,uk,trader, itraderuk.com" />
-    <meta property="og:title" content="iTrader UK" />
+    <meta name="keywords" content="Trading, Money Earning Webiste, Money Online, Online Income, Referral Boost, referralboost, Referral Boost,uk,trader, referralboost.com" />
+    <meta property="og:title" content="Referral Boost" />
     <meta property="og:type" content="Tradin Website" />
-    <meta property="og:url" content="http://itraderuk.com/" />
+    <meta property="og:url" content="http://referralboost.com/" />
     <meta property="og:image" content="" />
     <meta property="og:image:width" content="470" />
     <meta property="og:image:height" content="246" />
-    <meta property="og:site_name" content="iTraderUk" />
-    <meta property="og:description" content="iTrader UK is an online trusted money earning site" />
-    <meta name="twitter:card" content="ItraderUk Is Money Earn and Investment Platform" />
+    <meta property="og:site_name" content="referralboost" />
+    <meta property="og:description" content="Referral Boost is an online trusted money earning site" />
+    <meta name="twitter:card" content="referralboost Is Money Earn and Investment Platform" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:domain" content="" />
     <meta name="twitter:title" content="" />
-    <meta name="twitter:description" content=" iTrader UK" />
+    <meta name="twitter:description" content=" Referral Boost" />
     <meta name="twitter:image" content="" />
 
     <!-- Mobile Specific Metas
@@ -97,8 +97,8 @@
                         <span> 
                             <a class="" style="text-decoration: none;" href="{% url 'landing_home' %}"> 
                                 <h3 style="color: #13e0a7;" >  
-                                    <!-- <img class="brand-logo" alt=" iTrader logo" src="{% static 'app-assets/images/logo/itrader_logo_b-32_x_27.png' %}">  -->
-                                    iTrader Uk
+                                    <!-- <img class="brand-logo" alt=" Referral Boost logo" src="{% static 'app-assets/images/logo/referralboost_logo_b-32_x_27.png' %}">  -->
+                                    Referral Boost
                                 </h3>
                             </a>
 								
