--- a/templates/users/account/login.html
+++ b/templates/users/account/login.html
@@ -23,7 +23,7 @@
                                         <div class="p-1">
                                              <!-- <img src="{% static 'app-assets/images/logo/stack-logo-dark.png' %}"
                                                 alt="branding logo"> -->
-                                            <h4 class="text-info">iTrader UK</h4>
+                                            <h4 class="text-info">Referral Boost</h4>
                                            
                                         </div>
                                     </div>
