--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -7,11 +7,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="Itrader Uk Is a Best Earning Platform">
-    <meta name="keywords" content="itrader,itraderuk,trading,online earning">
-    <meta name="author" content="itrader">
-    <title> {% block title %} iTrader Uk {% endblock title %} </title>
-    <link rel="apple-touch-icon" href="{% static 'app-assets/images/logo/itrader_logo-32_x_27.png' %}">
+    <meta name="description" content="Referral Boost Is a Best Earning Platform">
+    <meta name="keywords" content="Referral Boost,referralboost,trading,online earning">
+    <meta name="author" content="Referral Boost">
+    <title> {% block title %} Referral Boost {% endblock title %} </title>
+    <link rel="apple-touch-icon" href="{% static 'app-assets/images/logo/referralboost_logo-32_x_27.png' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app-assets/images/ico/favicon1.ico' %} ">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i' %}" rel="stylesheet">
 
