--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -6,8 +6,8 @@
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="feather icon-menu font-large-1"></i></a></li>
                 <li class="nav-item">
-                    <a class="navbar-brand" href="{% if user.is_authenticated %} {% url 'home' %} {% else %} {% url 'landing_home' %} {% endif %}"><img class="brand-logo" alt="stack admin logo" src="{% static 'app-assets/images/logo/itrader_logo_b-32_x_27.png' %}">
-                        <h2 class="brand-text">iTrader Uk</h2>
+                    <a class="navbar-brand" href="{% if user.is_authenticated %} {% url 'home' %} {% else %} {% url 'landing_home' %} {% endif %}"><img class="brand-logo" alt="stack admin logo" src="{% static 'app-assets/images/logo/referralboost_logo_b-32_x_27.png' %}">
+                        <h2 class="brand-text">Referral Boost</h2>
                     </a>
                 </li>
                 <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="fa fa-ellipsis-v"></i></a></li>
