--- a/templates/users/footer.html
+++ b/templates/users/footer.html
@@ -3,6 +3,6 @@
     <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2 container center-layout"><span class="float-md-left d-block d-md-inline-block">Copyright &copy;<script>
         document.write(new Date().getFullYear());
     </script> 
-    <a class="text-bold-800 grey darken-2" href="#" target="_blank"> iTrader-uk </a></span><span class="float-md-right d-none d-lg-block"> Your Love & Our Security <i class="feather icon-heart pink"></i></span></p>
+    <a class="text-bold-800 grey darken-2" href="#" target="_blank"> Referral Boost </a></span><span class="float-md-right d-none d-lg-block"> Your Love & Our Security <i class="feather icon-heart pink"></i></span></p>
 </footer>
 <!-- END: Footer-->
